[tool.poetry]
name = "electronicparsers"
version = "0.1.0"
description = ""
authors = ["Ahmed Ilyas <ahmed.n.ilyas@gmail.com>"]
readme = "README.md"
packages = [{include = "electronicparsers"}]
include = ["*.yaml"]

[tool.poetry.dependencies]
python = "^3.9"
nomad-lab= {git = "https://github.com/nomad-coe/nomad.git", branch = "develop", extras = ["infrastructure"]}
nomad-schema-plugin-simulation-workflow = {git = "https://github.com/nomad-coe/nomad-schema-plugin-simulation-workflow.git", rev = "c78ff7349cff4be4a8f8c50d74c72e9c1b1152ab"}
# Other dependencies
lxml = "4.7.1"
pyscf = {version = "2.0.1", markers = "sys_platform == 'darwin'"}
netCDF4 = "1.5.4"
h5py = "^3.6.0"
pyyaml = "6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
